fixed weird problem with desalignment ....with 99.75% :)

--- a/src/Funcs/FocusLucket/index.css
+++ b/src/Funcs/FocusLucket/index.css
@@ -2,4 +2,6 @@
     background-color: gainsboro;
     vertical-align: middle;
     text-align: left;
+    margin:0px;
+    padding: 0px;
 }
