--- a/src/Funcs/LucketItem/index.css
+++ b/src/Funcs/LucketItem/index.css
@@ -11,7 +11,7 @@
 }
 
 .FocusLucketItem {
-    width: 99.75%;
+    width: 100%;
     display: flex;
     background-color: darkgrey;
     vertical-align: middle;
